envoy/http.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config: 
              '@type': 'type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager'
              stat_prefix: http_proxy
              route_config:
                name: all
                virtual_hosts:
                  - name: allbackend_cluster
                    domains:
                      - '*'
                    routes:
                    # example of blocking an only admin path route
                      - match: { prefix: "/admin" }
                        direct_response: {status: 403, body: {inline_string: "Forbidden"} }
                      - match: { prefix: "/" }
                        route:
                          cluster: allbackend_cluster
              http_filters:
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  
  clusters:
    - name: allbackend_cluster
      connect_timeout: 1s
      type: strict_dns
      lb_policy: round_robin
      load_assignment: 
        cluster_name: allbackend_cluster
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 1111
            
            - endpoint:
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 2222
            
            - endpoint:
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 3333
            
            - endpoint:
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 4444
